--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -57,5 +57,11 @@
     "homepage": {
         "outstanding-doctor": "Last week's featured doctor",
         "more-infor": "More infor"
+    },
+    "manage-schedule": {
+        "title": "Quản lý kế hoạch khám bệnh của bác sĩ",
+        "choose-doctor": "Chọn bác sĩ",
+        "choose-date": "Chọn ngày",
+        "save": "Lưu thông tin"
     }
 }
