--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -71,5 +71,14 @@
             "choose": "Choose ",
             "book-free": " and book (free)"
         }
+    },
+    "admin": {
+        "manage-doctor": {
+            "title": "Create doctor's information",
+            "select-doctor": "Select doctor: ",
+            "intro": "Introduction: ",
+            "add": "Add",
+            "save": "Save"
+        }
     }
 }
