--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -75,10 +75,16 @@
     "admin": {
         "manage-doctor": {
             "title": "Create doctor's information",
-            "select-doctor": "Select doctor: ",
-            "intro": "Introduction: ",
+            "select-doctor": "Select doctor",
+            "intro": "Introduction",
             "add": "Add",
-            "save": "Save"
+            "save": "Save",
+            "price": "Price",
+            "payment": "Payment",
+            "province": "Province",
+            "name-clinic": "Clinic's name",
+            "address-clinic": "Clinic's Address",
+            "note": "Note"
         }
     }
 }
