--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -75,10 +75,16 @@
     "admin": {
         "manage-doctor": {
             "title": "Tạo thêm thông tin bác sĩ",
-            "select-doctor": "Chọn bác sĩ: ",
-            "intro": "Thông tin giới thiệu: ",
+            "select-doctor": "Chọn bác sĩ",
+            "intro": "Thông tin giới thiệu",
             "add": "Tạo thông tin",
-            "save": "Lưu thông tin"
+            "save": "Lưu thông tin",
+            "price": "Giá khám bệnh",
+            "payment": "Phương thức thanh toán",
+            "province": "Tỉnh thành",
+            "name-clinic": "Tên phòng khám",
+            "address-clinic": "Địa chỉ phòng khám",
+            "note": "Ghi chú"
         }
     }
 }
