--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -77,6 +77,20 @@
             "detail": "See details",
             "payment": "The patient can pay the cost in the form of: ",
             "hide-price": "Hide"
+        },
+        "booking-modal": {
+            "title": "Information to book a medical appointment",
+            "fullName": "Fullname",
+            "phoneNumber": "Phone Number",
+            "email": "Email",
+            "address": "Address",
+            "reason": "Reason for medical examination",
+            "birthday": "Birthday",
+            "gender": "Genders",
+            "btnConfirm": "Confirm",
+            "btnCancel": "Cancel",
+            "price-booking": "Free booking",
+            "price": "Price: "
         }
     },
     "admin": {
