--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -36,7 +36,8 @@
             "manage-handbook": "Manage Handbook"
         },
         "doctor": {
-            "manage-schedule": "Manage doctor's schedule"
+            "manage-schedule": "Manage doctor's schedule",
+            "manage-patient": "Manage doctor's patient"
         }
     },
     "manage-user": {
